--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.freshmen.wtgf" >
+    package="com.freshmen.wtgf">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+        <!--main activity-->
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".App.MainActivity"
+            android:label="@string/app_name">
+
+        </activity>
+
+        <!--youtube player-->
+        <activity
+            android:name=".App.DetailActivity"
+            android:label="@string/title_activity_detail">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
