--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.freshmen.wtgf"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.freshmen.wtgf" >
     package="com.freshmen.wtgf">
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:hardwareAccelerated="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/WTGF">
-        <!--main activity-->
+        android:theme="@style/WTGF" >
+
+        <!-- main activity -->
         <activity
             android:name=".CategoryActivity"
-            android:label="@string/app_name">
-
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
-        <!--youtube player-->
+        <!-- youtube player -->
+        <activity
+            android:name=".App.DetailFragment"
+            android:label="@string/title_activity_detail" >
+        </activity>
         <activity
             android:name=".App.DetailActivity"
-            android:label="@string/title_activity_detail">
-
+            android:label="@string/title_activity_detail" >
         </activity>
     </application>
+
 </manifest>
