--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
@@ -27,6 +25,10 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name=".WorkoutActivity"
+            android:label="@string/title_activity_workout" />
 
         <!--youtube player-->
         <activity
