--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/WTGF">
         <!--main activity-->
         <activity
-            android:name=".CategoryActivity"
+            android:name=".App.CategoryActivity"
             android:label="@string/app_name">
 
             <intent-filter>
@@ -27,7 +27,7 @@
         </activity>
 
         <activity
-            android:name=".WorkoutActivity"
+            android:name=".App.WorkoutActivity"
             android:label="@string/title_activity_workout" />
 
         <!--youtube player-->
