--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         <!--main activity-->
         <activity
             android:name=".App.CategoryActivity"
-            android:label="@string/app_name">
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,12 +30,16 @@
 
         <activity
             android:name=".App.WorkoutActivity"
-            android:label="@string/title_activity_workout" />
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_workout"
+            android:screenOrientation="portrait" />
 
         <!--youtube player-->
         <activity
             android:name=".App.DetailActivity"
-            android:label="@string/title_activity_detail">
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_detail"
+            android:screenOrientation="portrait">
 
         </activity>
     </application>
