--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
@@ -38,5 +42,6 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.1.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.3'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
