--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.freshmen.wtgf" >
+<manifest
+    package="com.freshmen.wtgf"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     package="com.freshmen.wtgf">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -10,7 +11,7 @@
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/WTGF" >
+        android:theme="@style/WTGF">
 
         <!-- main activity -->
         <activity
@@ -36,8 +37,13 @@
             android:name=".App.DetailActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_detail"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".App.TrackerActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_tracker"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
