--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.3'
+    compile 'com.facebook.android:facebook-android-sdk:4.1.0'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
